# codebase-archaeologist

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/archaeologist/: __init__.py  cli.py  config.py
src/archaeologist/ingest/: __init__.py  ast_parser.py  git_extractor.py
src/archaeologist/query/: __init__.py  retriever.py  synthesizer.py
src/archaeologist/store/: __init__.py  vector_store.py
tests/: __init__.py  test_ast_parser.py  test_git_extractor.py
